2004-11-30 20:55  chris

	* lib/CGI/Compress/Gzip.pm, t/gzip.t, t/testhelp:
	  v0.18 Support more of the standard CGI->header() arguments

2004-01-08 13:24  chris

	* README, lib/CGI/Compress/Gzip.pm, t/gzip.t, t/testhelp: v0.17 *
	  Support -type CGI header flag * Add caveat about explicit use of
	  filehandles

2004-01-02 15:12  chris

	* README, lib/CGI/Compress/Gzip.pm: v0.16 Clean up documentation
	  Fix some URL errors

2003-12-30 11:48  chris

	* README: Fix README

2003-12-30 11:44  chris

	* index.html, lib/CGI/Compress/Gzip.pm, t/gzip.t, t/testhelp: v0.15
	  * Fix bug parsing CGI header() arguments * Add
	  programmer-configurable mim-type selection

2003-09-16 12:49  chris

	* Build.PL, COPYRIGHT, Gzip.pm, LICENSE, MANIFEST, Makefile.PL,
	  README, index.html, test.pl, testhelp, lib/CGI/Compress/Gzip.pm,
	  t/gzip.t, t/testhelp: v0.14 Update for new build and license
	  infrastructure

2003-08-28 11:07  chris

	* Gzip.pm, MANIFEST, README, test.pl, testhelp: v0.13 Add support
	  for CGI redirect() calls (if HTTP Status is not 200, content
	  should not be compressed).

2003-08-22 17:50  tasc

	* Gzip.pm: v0.12 - Fix bug where headers were altered even when
	  compression was inappropriate.

2003-03-31 14:01  chris

	* Gzip.pm, testhelp: Minor style/comment changes

2003-03-14 10:06  chris

	* Gzip.pm, README: v0.11 Handle default content-type of text/html
	  Add helpful diagnostic HTTP headers, if requested

2003-03-13 21:58  chris

	* Gzip.pm, README: v0.10 Fix for mod_perl -- use in-memory
	  compression

2003-02-12 13:05  chris

	* Gzip.pm: Rename the wrapper class to CGI::Compress::Gzip::wrapper

2003-02-12 08:51  chris

	* Gzip.pm, README, test.pl: v0.04 Acknowledge Windows failure
	  Disable for mod_perl Case-insensitive content-encoding tests

2003-02-08 00:34  chris

	* Gzip.pm: Update documentation

2003-02-06 00:15  chris

	* Gzip.pm, README, test.pl: 0.03 Header tweaks towards mod_perl
	  functionality

2003-02-05 23:31  chris
