@@ -1,3 +1,4 @@
+index.html
 ChangeLog
 lib/CGI/Compress/Gzip.pm
 Build.PL
