@@ -37,7 +37,7 @@ a:hover {
 
 <p class="title">CGI-Compress-Gzip</p>
 
-<p class="subtitle">Last update: <a href="gpl/CGI-Compress-Gzip-0.18-docs">v0.18</a>, 2004-11-30</p>
+<p class="subtitle">Last update: <a href="gpl/CGI-Compress-Gzip-0.19-docs">v0.19</a>, 2004-12-21</p>
 
 
 
@@ -66,6 +66,38 @@ modules, although those offer less control to the programmer.
     </tr>
   </thead>
   <tbody>
+    
+      <tr>
+        <td valign="top"><a href="#gpl">GPL</a></td>
+        <td valign="top">
+          <a href="gpl/CGI-Compress-Gzip-0.19.tgz">CGI-Compress-Gzip-0.19.tgz</a>
+          (<a href="gpl/CGI-Compress-Gzip-0.19.tgz.md5">MD5</a>)
+          <br>
+          <a href="gpl/CGI-Compress-Gzip-0.19.zip">CGI-Compress-Gzip-0.19.zip</a>
+          (<a href="gpl/CGI-Compress-Gzip-0.19.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="gpl/CGI-Compress-Gzip-0.19-docs">CGI-Compress-Gzip-0.19-docs</a>
+          
+        </td>
+        <td valign="top">Tue Dec 21 12:29:19 2004</td>
+      </tr>
+    
+      <tr>
+        <td valign="top"><a href="#lic">Clotho</a></td>
+        <td valign="top">
+          <a href="clotho/CGI-Compress-Gzip-0.19.tgz">CGI-Compress-Gzip-0.19.tgz</a>
+          (<a href="clotho/CGI-Compress-Gzip-0.19.tgz.md5">MD5</a>)
+          <br>
+          <a href="clotho/CGI-Compress-Gzip-0.19.zip">CGI-Compress-Gzip-0.19.zip</a>
+          (<a href="clotho/CGI-Compress-Gzip-0.19.zip.md5">MD5</a>)
+          
+            <br>
+            <a href="clotho/CGI-Compress-Gzip-0.19-docs">CGI-Compress-Gzip-0.19-docs</a>
+          
+        </td>
+        <td valign="top">Tue Dec 21 12:29:19 2004</td>
+      </tr>
     
       <tr>
         <td valign="top"><a href="#gpl">GPL</a></td>
