@@ -1,3 +1,8 @@
+2004-12-21 12:28  chris
+
+	* lib/CGI/Compress/Gzip.pm, t/gzip.t, t/testhelp: v0.19 Add
+	  workaround for unbuffered CGI output
+
 2004-11-30 20:55  chris
 
 	* lib/CGI/Compress/Gzip.pm, t/gzip.t, t/testhelp:
